Notice to add prefix/lib to LD_LIBRARY_PATH
In the final success message (after `make install') a line was added to
remind the users to add `$(prefix)/lib' to their `LD_LIBRARY_PATH'. It is
necessary for the programs that want to link to Gnuastro's library,
including Gnuastro's programs themselves.

--- a/Makefile.am
+++ b/Makefile.am
@@ -236,6 +236,7 @@ install-exec-local:
 	 echo;                                                                       \
 	 echo "Environment variables to check: ";                                    \
 	 echo "  - '$(prefix)/bin' in PATH.";                                        \
+	 echo "  - '$(prefix)/lib' in LD_LIBRARY_PATH.";                             \
 	 echo "(for an intro, run 'info gnuastro \"Installation directory\"')";      \
 	 echo;                                                                       \
 	 echo;                                                                       \
