Check for malloc returning valid pointer
On some systems (even those with Glibc) the library checks of `make check'
would fail because of an undefined reference to `rpl_malloc'. This was
because we were missing an `AC_FUNC_MALLOC' in `configure.ac'.

This fixes bug #49459.

--- a/configure.ac
+++ b/configure.ac
@@ -124,6 +124,13 @@ CC="$PTHREAD_CC"
 
 
 
+
+# Check if `malloc(0)' returns valid pointer
+AC_FUNC_MALLOC
+
+
+
+
 # Search for necessary libraries. After each library is found,
 # AC_SEARCH_LIBS adds the -lLIBRARY flag to the LIBS variable which is then
 # given to all the Makefiles. Each new flag is added to the left of the old
