--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -39,7 +39,7 @@ libgnuastro_la_SOURCES = array.c box.c checkset.c configfiles.c fits.c  \
 # Installed headers, note that we are not blindly including all `.h' files
 # in the $(headersdir) directory. Some of the header files don't need to be
 # installed.
-pkginclude_HEADERS = gnuastro/gnuastro.h $(headersdir)/array.h            \
+pkginclude_HEADERS = gnuastro/config.h $(headersdir)/array.h              \
   $(headersdir)/box.h $(headersdir)/fits.h $(headersdir)/git.h            \
   $(headersdir)/linkedlist.h $(headersdir)/mesh.h $(headersdir)/polygon.h \
   $(headersdir)/qsort.h $(headersdir)/spatialconvolve.h                   \
@@ -53,7 +53,7 @@ pkginclude_HEADERS = gnuastro/gnuastro.h $(headersdir)/array.h            \
 # will not distributed, so we need to explicitly tell Automake to
 # distribute them here.
 headersdir=$(top_srcdir)/lib/gnuastro
-EXTRA_DIST = gnuastro.pc.in gnuastro.h.in checkset.h commonargs.h       \
+EXTRA_DIST = gnuastro.pc.in config.h.in checkset.h commonargs.h         \
   commonparams.h configfiles.h fixedstringmacros.h mode.h neighbors.h   \
   timing.h $(headersdir)/README
 
@@ -62,18 +62,18 @@ EXTRA_DIST = gnuastro.pc.in gnuastro.h.in checkset.h commonargs.h       \
 # Makefile.am)
 pkgconfig_DATA = gnuastro.pc
 pkgconfigdir = $(libdir)/pkgconfig
-CLEANFILES = gnuastro.pc gnuastro/gnuastro.h
+CLEANFILES = gnuastro.pc gnuastro/config.h
 
 
-# Build Gnuastro's pkg-config file and `gnuastro.h' based on the
+# Build Gnuastro's pkg-config file and `config.h' based on the
 # information in the Makefile after the Makefile has been built.
-gnuastro/gnuastro.h: Makefile gnuastro.h.in
+gnuastro/config.h: Makefile config.h.in
 	rm -f $@ $@.tmp
 	$(MKDIR_P) gnuastro
 	$(SED) -e 's|@VERSION[@]|$(VERSION)|g'                            \
 	       -e 's|@HAVE_LIBGIT2[@]|$(HAVE_LIBGIT2)|g'                  \
 	       -e 's|@HAVE_PTHREAD_BARRIER[@]|$(HAVE_PTHREAD_BARRIER)|g'  \
-               $(srcdir)/gnuastro.h.in >> $@.tmp
+               $(srcdir)/config.h.in >> $@.tmp
 	chmod a-w $@.tmp
 	mv $@.tmp $@
 
