Arithmetic using new data structure
 Many functions were changed/added in `fits.h' and `data.h', so when
 this branch is complete, go through the full header and update
 them. Since the job is ongoing now and further changes are possible
 as the data structure is implemented in all the utilities, other
 changes might be made soon, so the manual is not being updated with
 this commit.

The new data structure is now fully implemented in Arithmetic. Also,
there is now the possibility that data can be stored on the hdd/ssd
instead of kept in RAM. Several changes were made that are listed
below:

 - The operands and operators functions were moved to two separate
   `.c' and `.h' files in Arithmetic's source: `operands.[ch]' and
   `operators.[ch]'.

 - The man-pages were built unconditionally, even when Gnuastro was
   configured to only build a limited number of utilities. Now, the
   man-page will only be created if the program was built.

 - A new set of internal library functions for changing data type
   arrays was defined in `lib/changetype.[ch]'. This was done to keep
   the `lib/data.c' file clean from these repetative functions and
   currently its not intended for installation, there is a high-level
   `gal_data_copy_to_new_type' for use by library users.

Changed option values:

 - `--type' in Arithmetic and MakeProfiles now uses `uchar' instead of
   `byte' for the `unsigned char' type array (equivalent to CFITSIO's
   `BYTE_IMG').

New user-visible macros:
 - GAL_CONFIG_HAVE_WCSLIB_VERSION

New user-visible functions:
 - gal_linkedlist_free_stll

--- a/bin/arithmetic/Makefile.am
+++ b/bin/arithmetic/Makefile.am
@@ -29,7 +29,7 @@ AM_CPPFLAGS = -I\$(top_srcdir)/bootstrapped/lib
 bin_PROGRAMS = astarithmetic
 
 astarithmetic_SOURCES = main.c main.h cite.h ui.c ui.h args.h	\
-arithmetic.c arithmetic.h
+arithmetic.c arithmetic.h operands.c operands.h operators.c operators.h
 
 astarithmetic_LDADD = $(top_builddir)/bootstrapped/lib/libgnu.la	\
 -lgnuastro
