--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -31,10 +31,10 @@ libgnuastro_la_LDFLAGS = -version-info $(GAL_LT_VERSION)
 
 
 # Specify the library .c files
-libgnuastro_la_SOURCES = array.c box.c changetype.c checkset.c           \
-  configfiles.c data.c fits.c git.c linkedlist.c mesh.c mode.c polygon.c \
-  qsort.c spatialconvolve.c statistics.c threads.c timing.c txtarray.c   \
-  wcs.c
+libgnuastro_la_SOURCES = array.c box.c checkset.c configfiles.c data.c	\
+  data-arithmetic.c data-changetype.c fits.c git.c linkedlist.c mesh.c	\
+  mode.c polygon.c qsort.c spatialconvolve.c statistics.c threads.c	\
+  timing.c txtarray.c wcs.c
 
 
 # Installed headers, note that we are not blindly including all `.h' files
@@ -54,9 +54,9 @@ pkginclude_HEADERS = gnuastro/config.h $(headersdir)/array.h            \
 # and if they are not explicitly mentioned somewhere in the Makefile, they
 # will not distributed, so we need to explicitly tell Automake to
 # distribute them here.
-EXTRA_DIST = gnuastro.pc.in changetype.h config.h.in checkset.h         \
-  commonargs.h commonparams.h configfiles.h fixedstringmacros.h mode.h  \
-  neighbors.h timing.h $(headersdir)/README
+EXTRA_DIST = gnuastro.pc.in data-arithmetic.h data-changetype.h         \
+  config.h.in checkset.h commonargs.h commonparams.h configfiles.h      \
+  fixedstringmacros.h mode.h neighbors.h timing.h $(headersdir)/README
 
 
 # Definitions for Gnuastro's the pkg-config file (inspired from GSL's
