Arithmetic with internal type conversion
Arithmetic now uses the internal type conversion of C on arrays on internal
binary operators when the types are different.  Until now, it would convert
them to the same type and then do the operation. But now, there is no need
to do any conversion. This will speed up the process, but it is a strong
burden on the compilation, so the compilation can become very slow,
especially, when all the types are desired, on my computer it took about 40
minutes to compile `data.o' and `data.c'. So some configure time options
have been added to allow the users to choose the non-basic types if they
want them.

Don't forget to add/describe the configure time options in the final
manual, and also the new macros in `gnuastro/config.h' describing the
different arithmetic types.

--- a/configure.ac
+++ b/configure.ac
@@ -259,6 +259,79 @@ AC_DEFINE_UNQUOTED([CONF_SHOWFMT], [" %-20s"],
 
 
 
+# Enable the types
+AC_ARG_ENABLE([arith-char],
+              [AS_HELP_STRING([--enable-arith-char],
+                    [Enable direct arithmetic on char.])],
+	      [AS_IF([test "x$enable_arith_char" != xno],
+                     [enable_arith_char=1], [enable_arith_char=0])],
+              [enable_arith_char=0])
+AC_DEFINE_UNQUOTED([GAL_CONFIG_ARITH_CHAR], [$enable_arith_char],
+                   [Direct arithmetic on char data.])
+AC_SUBST(HAVE_ARITH_CHAR, [$enable_arith_char])
+
+AC_ARG_ENABLE([arith-ushort],
+              [AS_HELP_STRING([--enable-arith-ushort],
+                    [Enable direct arithmetic on ushort.])],
+	      [AS_IF([test "x$enable_arith_ushort" != xno],
+                     [enable_arith_ushort=1], [enable_arith_ushort=0])],
+              [enable_arith_ushort=0])
+AC_DEFINE_UNQUOTED([GAL_CONFIG_ARITH_USHORT], [$enable_arith_ushort],
+                   [Direct arithmetic on unsigned short data.])
+AC_SUBST(HAVE_ARITH_USHORT, [$enable_arith_ushort])
+
+AC_ARG_ENABLE([arith-short],
+              [AS_HELP_STRING([--enable-arith-short],
+                    [Enable direct arithmetic on short.])],
+	      [AS_IF([test "x$enable_arith_short" != xno],
+                     [enable_arith_short=1], [enable_arith_short=0])],
+              [enable_arith_short=0])
+AC_DEFINE_UNQUOTED([GAL_CONFIG_ARITH_SHORT], [$enable_arith_short],
+                   [Direct arithmetic on short data.])
+AC_SUBST(HAVE_ARITH_SHORT, [$enable_arith_short])
+
+AC_ARG_ENABLE([arith-uint],
+              [AS_HELP_STRING([--enable-arith-uint],
+                    [Enable direct arithmetic on uint.])],
+	      [AS_IF([test "x$enable_arith_uint" != xno],
+                     [enable_arith_uint=1], [enable_arith_uint=0])],
+              [enable_arith_uint=0])
+AC_DEFINE_UNQUOTED([GAL_CONFIG_ARITH_UINT], [$enable_arith_uint],
+                   [Direct arithmetic on unsigned int data.])
+AC_SUBST(HAVE_ARITH_UINT, [$enable_arith_uint])
+
+AC_ARG_ENABLE([arith-int],
+              [AS_HELP_STRING([--enable-arith-int],
+                    [Enable direct arithmetic on int.])],
+	      [AS_IF([test "x$enable_arith_int" != xno],
+                     [enable_arith_int=1], [enable_arith_int=0])],
+              [enable_arith_int=0])
+AC_DEFINE_UNQUOTED([GAL_CONFIG_ARITH_INT], [$enable_arith_int],
+                   [Direct arithmetic on int data.])
+AC_SUBST(HAVE_ARITH_INT, [$enable_arith_int])
+
+AC_ARG_ENABLE([arith-ulong],
+              [AS_HELP_STRING([--enable-arith-ulong],
+                    [Enable direct arithmetic on unsigned long.])],
+	      [AS_IF([test "x$enable_arith_ulong" != xno],
+                     [enable_arith_ulong=1], [enable_arith_ulong=0])],
+              [enable_arith_ulong=0])
+AC_DEFINE_UNQUOTED([GAL_CONFIG_ARITH_ULONG], [$enable_arith_ulong],
+                   [Direct arithmetic on unsigned long data.])
+AC_SUBST(HAVE_ARITH_ULONG, [$enable_arith_ulong])
+
+AC_ARG_ENABLE([arith-longlong],
+              [AS_HELP_STRING([--enable-arith-longlong],
+                    [Enable direct arithmetic on long long.])],
+	      [AS_IF([test "x$enable_arith_longlong" != xno],
+                     [enable_arith_longlong=1], [enable_arith_longlong=0])],
+              [enable_arith_longlong=0])
+AC_DEFINE_UNQUOTED([GAL_CONFIG_ARITH_LONGLONG], [$enable_arith_longlong],
+                   [Direct arithmetic on long long data.])
+AC_SUBST(HAVE_ARITH_LONGLONG, [$enable_arith_longlong])
+
+
+
 
 # Read arguments about which programs to install. After checking if
 # the argument was actually called, remove any value the user might
