--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -73,6 +73,13 @@ gnuastro/config.h: Makefile config.h.in
 	$(MKDIR_P) gnuastro
 	$(SED) -e 's|@VERSION[@]|$(VERSION)|g'                            \
 	       -e 's|@HAVE_LIBGIT2[@]|$(HAVE_LIBGIT2)|g'                  \
+	       -e 's|@HAVE_ARITH_CHAR[@]|$(HAVE_ARITH_CHAR)|g'            \
+	       -e 's|@HAVE_ARITH_USHORT[@]|$(HAVE_ARITH_USHORT)|g'        \
+	       -e 's|@HAVE_ARITH_SHORT[@]|$(HAVE_ARITH_SHORT)|g'          \
+	       -e 's|@HAVE_ARITH_UINT[@]|$(HAVE_ARITH_UINT)|g'            \
+	       -e 's|@HAVE_ARITH_INT[@]|$(HAVE_ARITH_INT)|g'              \
+	       -e 's|@HAVE_ARITH_ULONG[@]|$(HAVE_ARITH_ULONG)|g'          \
+	       -e 's|@HAVE_ARITH_LONGLONG[@]|$(HAVE_ARITH_LONGLONG)|g'    \
 	       -e 's|@HAVE_WCSLIB_VERSION[@]|$(HAVE_WCSLIB_VERSION)|g'    \
 	       -e 's|@HAVE_PTHREAD_BARRIER[@]|$(HAVE_PTHREAD_BARRIER)|g'  \
                $(srcdir)/config.h.in >> $@.tmp
