--- a/lib/config.h.in
+++ b/lib/config.h.in
@@ -30,6 +30,13 @@ along with Gnuastro. If not, see <http://www.gnu.org/licenses/>.
 /* Macros. */
 #define GAL_CONFIG_VERSION "@VERSION@"
 #define GAL_CONFIG_HAVE_LIBGIT2 @HAVE_LIBGIT2@
+#define GAL_CONFIG_ARITH_CHAR @HAVE_ARITH_CHAR@
+#define GAL_CONFIG_ARITH_USHORT @HAVE_ARITH_USHORT@
+#define GAL_CONFIG_ARITH_SHORT @HAVE_ARITH_SHORT@
+#define GAL_CONFIG_ARITH_UINT @HAVE_ARITH_UINT@
+#define GAL_CONFIG_ARITH_INT @HAVE_ARITH_INT@
+#define GAL_CONFIG_ARITH_ULONG @HAVE_ARITH_ULONG@
+#define GAL_CONFIG_ARITH_LONGLONG @HAVE_ARITH_LONGLONG@
 #define GAL_CONFIG_HAVE_WCSLIB_VERSION @HAVE_WCSLIB_VERSION@
 #define GAL_CONFIG_HAVE_PTHREAD_BARRIER @HAVE_PTHREAD_BARRIER@
 
