All binary operator types set at configure time
Until now the default binary operator types were treated differently from
the non-default types. But now, they are treated exactly the same as the
non-default types. This allows greater generality and also makes the
programming easier, since no type is different from the others.

The options specifying the native binary operator types are also now
described in the manual.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -95,15 +95,19 @@ gnuastro/config.h: Makefile config.h.in
 	$(MKDIR_P) gnuastro
 	$(SED) -e 's|@VERSION[@]|$(VERSION)|g'                            \
 	       -e 's|@HAVE_LIBGIT2[@]|$(HAVE_LIBGIT2)|g'                  \
-	       -e 's|@HAVE_ARITH_CHAR[@]|$(HAVE_ARITH_CHAR)|g'            \
-	       -e 's|@HAVE_ARITH_USHORT[@]|$(HAVE_ARITH_USHORT)|g'        \
-	       -e 's|@HAVE_ARITH_SHORT[@]|$(HAVE_ARITH_SHORT)|g'          \
-	       -e 's|@HAVE_ARITH_UINT[@]|$(HAVE_ARITH_UINT)|g'            \
-	       -e 's|@HAVE_ARITH_INT[@]|$(HAVE_ARITH_INT)|g'              \
-	       -e 's|@HAVE_ARITH_ULONG[@]|$(HAVE_ARITH_ULONG)|g'          \
-	       -e 's|@HAVE_ARITH_LONGLONG[@]|$(HAVE_ARITH_LONGLONG)|g'    \
 	       -e 's|@HAVE_WCSLIB_VERSION[@]|$(HAVE_WCSLIB_VERSION)|g'    \
 	       -e 's|@HAVE_PTHREAD_BARRIER[@]|$(HAVE_PTHREAD_BARRIER)|g'  \
+	       -e 's|@HAVE_BIN_OP_UCHAR[@]|$(HAVE_BIN_OP_UCHAR)|g'        \
+	       -e 's|@HAVE_BIN_OP_CHAR[@]|$(HAVE_BIN_OP_CHAR)|g'          \
+	       -e 's|@HAVE_BIN_OP_USHORT[@]|$(HAVE_BIN_OP_USHORT)|g'      \
+	       -e 's|@HAVE_BIN_OP_SHORT[@]|$(HAVE_BIN_OP_SHORT)|g'        \
+	       -e 's|@HAVE_BIN_OP_UINT[@]|$(HAVE_BIN_OP_UINT)|g'          \
+	       -e 's|@HAVE_BIN_OP_INT[@]|$(HAVE_BIN_OP_INT)|g'            \
+	       -e 's|@HAVE_BIN_OP_ULONG[@]|$(HAVE_BIN_OP_ULONG)|g'        \
+	       -e 's|@HAVE_BIN_OP_LONG[@]|$(HAVE_BIN_OP_LONG)|g'          \
+	       -e 's|@HAVE_BIN_OP_LONGLONG[@]|$(HAVE_BIN_OP_LONGLONG)|g'  \
+	       -e 's|@HAVE_BIN_OP_FLOAT[@]|$(HAVE_BIN_OP_FLOAT)|g'        \
+	       -e 's|@HAVE_BIN_OP_DOUBLE[@]|$(HAVE_BIN_OP_DOUBLE)|g'      \
                $(srcdir)/config.h.in >> $@.tmp
 	chmod a-w $@.tmp
 	mv $@.tmp $@
