--- a/lib/config.h.in
+++ b/lib/config.h.in
@@ -27,18 +27,27 @@ along with Gnuastro. If not, see <http://www.gnu.org/licenses/>.
 
 
 
-/* Macros. */
-#define GAL_CONFIG_VERSION "@VERSION@"
-#define GAL_CONFIG_HAVE_LIBGIT2 @HAVE_LIBGIT2@
-#define GAL_CONFIG_ARITH_CHAR @HAVE_ARITH_CHAR@
-#define GAL_CONFIG_ARITH_USHORT @HAVE_ARITH_USHORT@
-#define GAL_CONFIG_ARITH_SHORT @HAVE_ARITH_SHORT@
-#define GAL_CONFIG_ARITH_UINT @HAVE_ARITH_UINT@
-#define GAL_CONFIG_ARITH_INT @HAVE_ARITH_INT@
-#define GAL_CONFIG_ARITH_ULONG @HAVE_ARITH_ULONG@
-#define GAL_CONFIG_ARITH_LONGLONG @HAVE_ARITH_LONGLONG@
-#define GAL_CONFIG_HAVE_WCSLIB_VERSION @HAVE_WCSLIB_VERSION@
+/* Configuration macros: */
+
+#define GAL_CONFIG_VERSION              "@VERSION@"
+
+#define GAL_CONFIG_HAVE_LIBGIT2         @HAVE_LIBGIT2@
+
+#define GAL_CONFIG_HAVE_WCSLIB_VERSION  @HAVE_WCSLIB_VERSION@
+
 #define GAL_CONFIG_HAVE_PTHREAD_BARRIER @HAVE_PTHREAD_BARRIER@
+
+#define GAL_CONFIG_BIN_OP_UCHAR         @HAVE_BIN_OP_UCHAR@
+#define GAL_CONFIG_BIN_OP_CHAR          @HAVE_BIN_OP_CHAR@
+#define GAL_CONFIG_BIN_OP_USHORT        @HAVE_BIN_OP_USHORT@
+#define GAL_CONFIG_BIN_OP_SHORT         @HAVE_BIN_OP_SHORT@
+#define GAL_CONFIG_BIN_OP_UINT          @HAVE_BIN_OP_UINT@
+#define GAL_CONFIG_BIN_OP_INT           @HAVE_BIN_OP_INT@
+#define GAL_CONFIG_BIN_OP_ULONG         @HAVE_BIN_OP_ULONG@
+#define GAL_CONFIG_BIN_OP_LONG          @HAVE_BIN_OP_LONG@
+#define GAL_CONFIG_BIN_OP_LONGLONG      @HAVE_BIN_OP_LONGLONG@
+#define GAL_CONFIG_BIN_OP_FLOAT         @HAVE_BIN_OP_FLOAT@
+#define GAL_CONFIG_BIN_OP_DOUBLE        @HAVE_BIN_OP_DOUBLE@
 
 
 
