--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -41,9 +41,9 @@ libgnuastro_la_LDFLAGS = -version-info $(GAL_LT_VERSION)
 
 # Specify the library .c files
 libgnuastro_la_SOURCES = array.c box.c checkset.c configfiles.c data.c  \
-  data-arithmetic.c data-copy.c fits.c git.c linkedlist.c mesh.c mode.c \
-  polygon.c qsort.c spatialconvolve.c statistics.c threads.c timing.c   \
-  txtarray.c wcs.c
+  data-arithmetic-binary.c data-copy.c fits.c git.c linkedlist.c mesh.c \
+  mode.c polygon.c qsort.c spatialconvolve.c statistics.c threads.c     \
+  timing.c txtarray.c wcs.c
 
 
 
