Bitwise operators available in arithmetic operations
Mask images in astronomy commonly use bit values where every bit has a
special meaning. Therefore bitwise operators are important in low-level
analysis of the data. With this commit, Gnuastro's `gal_data_arithmetic'
function and thus the Arithmetic program now support bitwise operators on
integer types.

Some other minor works in this commit:

 - Two new blank pixel related functions have been added:
   `gal_data_has_blank' and `gal_data_flag_blank'.

 - Three new operators added to `gal_data_arithmetic': "modulo"
   (remainder), "isblank", and "not".

 - The message at the end of configure also lets the users know that some
   libraries will take a while to compile.

 - Work has also started on unary operators.

This finishes task #13868.

--- a/configure.ac
+++ b/configure.ac
@@ -675,8 +675,8 @@ AC_OUTPUT
 AS_IF([test x$enable_guide_message = xyes],
 [
   AS_ECHO([])
-  AS_ECHO([===================================================================])
-  AS_ECHO([===================================================================])
+  AS_ECHO([====================================================================])
+  AS_ECHO([====================================================================])
   AS_ECHO(["$PACKAGE_NAME (Gnuastro) $PACKAGE_VERSION is successfully"])
   AS_ECHO(["configured for this machine."])
   AS_ECHO([])
@@ -709,9 +709,10 @@ AS_IF([test x$enable_guide_message = xyes],
   AS_ECHO([])
   AS_ECHO(["    make"])
   AS_ECHO([])
-  AS_ECHO(["(Build faster on N threads with 'make -jN'.)"])
+  AS_ECHO(["(RECOMMENDED: Build faster on N threads with 'make -jN'.)"])
   AS_ECHO(["(Configure with '--disable-guide-message' for no messages.)"])
-  AS_ECHO([===================================================================])
-  AS_ECHO([===================================================================])
+  AS_ECHO(["(Please be patient, some libraries take a few minutes to compile.)"])
+  AS_ECHO([====================================================================])
+  AS_ECHO([====================================================================])
   AS_ECHO([])
 ])
