Removed `anyblank' from datastructure, several new operators
The `data-arithmetic-unary.[ch]' library files were changed to
`data-arithmetic-other.[ch]', since it will host functions for a more wider
class of operators. This was mainly prompted by the new
`data_arithmetic_unary_function_f' and `data-arithmetic_binary_function_f'
functions.

The `gal_data_string_to_number' can now be told to only read the number as
a floating point by adding an `f' to the end of the string.

`gal_data_operator_string' is a new function to return the string
equivalent of an operator, mainly useful for error messages.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -42,7 +42,7 @@ libgnuastro_la_LDFLAGS = -version-info $(GAL_LT_VERSION)
 # Specify the library .c files
 libgnuastro_la_SOURCES = array.c box.c checkset.c configfiles.c data.c  \
   data-arithmetic-binary.c data-arithmetic-onlyint.c                    \
-  data-arithmetic-unary.c data-copy.c fits.c git.c linkedlist.c mesh.c  \
+  data-arithmetic-other.c data-copy.c fits.c git.c linkedlist.c mesh.c  \
   mode.c polygon.c qsort.c spatialconvolve.c statistics.c threads.c     \
   timing.c txtarray.c wcs.c
 
@@ -71,7 +71,7 @@ pkginclude_HEADERS = gnuastro/config.h $(headersdir)/array.h            \
 # will not distributed, so we need to explicitly tell Automake to
 # distribute them here.
 EXTRA_DIST = gnuastro.pc.in data-arithmetic.h data-arithmetic-binary.h	\
-  data-arithmetic-onlyint.h data-arithmetic-unary.h data-copy.h         \
+  data-arithmetic-onlyint.h data-arithmetic-other.h data-copy.h         \
   config.h.in checkset.h commonargs.h commonparams.h configfiles.h      \
   fixedstringmacros.h mode.h neighbors.h timing.h $(headersdir)/README
 
